--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
 services:
-  chrome-vnc:
+  chromium_vnc:
     build:
       context: .
-    container_name: chrome-vnc
     ports:
-      - "5900:5900"
+      - "80:80
+      - "5901:5901" 
     environment:
-      - DISPLAY=:99
+      - PASSWORD=password1
     volumes:
-      - /tmp/.X11-unix:/tmp/.X11-unix
+      - ~/.vnc:/root/.vnc 
+      - ~/.ratpoisonrc:/root/.ratpoisonrc
+    network_mode: bridge 
+    restart: always 
