--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
+
 services:
-  chrome-kiosk:
+  chrome:
     build: .
-    container_name: chrome-kiosk
-    ports:
-      - "5900:5900"  
+    container_name: chrome_kiosk
     environment:
       - DISPLAY=:99
-    shm_size: "2g"
-    restart: unless-stopped
+      - SCREEN_WIDTH=1920
+      - SCREEN_HEIGHT=1080
+      - SCREEN_DEPTH=24
+    ports:
+      - "5900:5900"  
+    volumes:
+      - /dev/shm:/dev/shm  
+    restart: always
