--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,44 +1,20 @@
-[supervisord]
-nodaemon=true
-logfile=/var/log/supervisord.log
-pidfile=/var/run/supervisord.pid
-
-[supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
-
-[unix_http_server]
-file=/var/run/supervisor.sock
-chmod=0700
-
-[rpcinterface:supervisor]
-supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
-
-[program:chrome-remote-desktop]
-command=/opt/google/chrome-remote-desktop/start-host --code="YOUR_AUTH_CODE" --redirect-url="https://remotedesktop.google.com/_/oauthredirect" --name="MyRemoteDesktop"
+[program:xrdp]
+command=/usr/sbin/xrdp
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/chrome-remote-desktop.err.log
-stdout_logfile=/var/log/chrome-remote-desktop.out.log
-user=chrome
+stderr_logfile=/var/log/xrdp.err.log
+stdout_logfile=/var/log/xrdp.out.log
 
-[program:xvfb]
-command=/usr/bin/Xvfb :10 -screen 0 1920x1080x16
+[program:x11vnc]
+command=/usr/bin/x11vnc -forever -usepw -create
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/xvfb.err.log
-stdout_logfile=/var/log/xvfb.out.log
-
-[program:pulseaudio]
-command=/usr/bin/pulseaudio --system --disallow-exit
-autostart=true
-autorestart=true
-stderr_logfile=/var/log/pulseaudio.err.log
-stdout_logfile=/var/log/pulseaudio.out.log
+stderr_logfile=/var/log/x11vnc.err.log
+stdout_logfile=/var/log/x11vnc.out.log
 
 [program:gnome-session]
-command=/usr/bin/gnome-session
+command=gnome-session --session=gnome-classic
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/gnome-session.err.log
-stdout_logfile=/var/log/gnome-session.out.log
-environment=DISPLAY=":10"
+stderr_logfile=/var/log/gnome.err.log
+stdout_logfile=/var/log/gnome.out.log
