--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,3 +1,7 @@
+[supervisord]
+nodaemon=true
+logfile=/var/log/supervisord.log
+
 [program:xrdp]
 command=/usr/sbin/xrdp
 autostart=true
@@ -12,9 +16,16 @@ autorestart=true
 stderr_logfile=/var/log/x11vnc.err.log
 stdout_logfile=/var/log/x11vnc.out.log
 
-[program:gnome-session]
-command=gnome-session --session=gnome-classic
+[program:fluxbox]
+command=/usr/bin/fluxbox
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/gnome.err.log
-stdout_logfile=/var/log/gnome.out.log
+stderr_logfile=/var/log/fluxbox.err.log
+stdout_logfile=/var/log/fluxbox.out.log
+
+[program:xfce4-session]
+command=/usr/bin/startxfce4
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/xfce4-session.err.log
+stdout_logfile=/var/log/xfce4-session.out.log
